Bugfix/auto assign (#50)
* Auto Assign Room
Added the logic for auto assigning room occupancy
https://app.asana.com/0/1205472772784381/1205804857925443/f

* Increased the timeout

* Changed the logic for the modal option selecting

* Saved the variable in constant to have the expected result in all cases

* Added the logic for double occupancy

* Converted string to integer

* Code improvements, covering edge cases

* Removed unused variable

* Room Assignment: Removed the reset thingy that was appearing twice for no apparent reason :)

* Reseting the rooms occupancy when cicking on the minus and fixed wrong data room atributes

* Reset room occupants logic changes

* Checkout page: Increased the timeout on auto assign
Increase the timeout on private and roommate auto assigning
Asana Task: https://app.asana.com/0/1205472772784381/1205804857925443/f

* Checkout page: fix auto assign on step 2
Create a custom event 'occupant.popup.html.ready' to trigger on #addOccupantsModal when html is ready
Assana Task: https://app.asana.com/0/1205472772784381/1205804857925443/f

* Checkout page: fix auto assign on step 2
Fix not js error
Asana Task: https://app.asana.com/0/1205472772784381/1205804857925443/f

* Style room occupancy - checkout

* Hide the button

---------

--- a/wp-content/themes/trek-travel-theme/assets/css/main.css
+++ b/wp-content/themes/trek-travel-theme/assets/css/main.css
@@ -15028,6 +15028,9 @@ nav .nav-tabs .nav-link.active {
   margin-bottom: 1rem;
   order: 2;
 }
+.checkout-step-two-hotel__two-bed .checkout-step-two-hotel__edit-occupants-btn {
+  display: none;
+}
 .checkout-step-two-hotel__one-bed, .checkout-step-two-hotel__two-bed, .checkout-step-two-hotel__open-to-roommate, .checkout-step-two-hotel__private {
   display: flex;
   justify-content: space-between;
